# hubstify-mcp

./: .copier-answers.yml  .env.example  .gitignore  INTEGRATIONS.md  LICENSE  Makefile  README.md  claude_desktop_config.example.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/domain/: activity.py  base.py  member.py  organization.py  project.py  task.py  team.py  time_entry.py  timesheet.py  user.py  value_objects.py
app/hubstaff/: auth.py  client.py  errors.py
app/mcp/: context.py  mcp.py  support.py
app/mcp/tools/: identity.py  people.py  projects.py  raw.py  time.py  writes.py
app/repositories/: activity_repository.py  base.py  member_repository.py  organization_repository.py  project_repository.py  task_repository.py  team_repository.py  time_entry_repository.py  user_repository.py
app/services/: time_service.py  timesheet_service.py
config/: .env.example
src/: hubstaff.ts  index.ts
tests/: _helpers.py  conftest.py  test_auth.py  test_client.py  test_config.py  test_context.py  test_domain_models.py  test_repositories.py  test_server.py  test_services.py  test_support.py  test_tools_raw.py  test_tools_read.py  test_tools_time.py  test_tools_write.py  test_value_objects.py
