[project]
name = "hubstaff-mcp"
version = "0.1.0"
description = "Hubstaff MCP server — operate Hubstaff time tracking, projects, tasks and timesheets through any LLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "httpx>=0.27",
    "tzdata>=2024.1",
]

[project.scripts]
hubstaff-mcp = "app.main:run"

[dependency-groups]
code-quality = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = 'py313'

[tool.ruff.lint]
select = [
    "I",     # isort
    "F",     # pyflakes
    "FAST",  # FastApi
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "COM",   # flake8-commas
    "T10",   # flake8-debugger
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "N",     # pep8-naming
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
]
ignore = [
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN204", # missing-return-type-special-method
    "ANN401", # any-type
    "COM812", # trailing-comma-on-bare-tuple
    "RET503", # implicit-return
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]


[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "app"
